ebus Daemon (ebusd) - ChangeLog
===============================

2013-05-17:
* Modified eb_serial_valid function and usage (thx Alexey Ozerov)

2013-05-16:
* Added ability to restrict tcp connection to localhost. (thx Alexey Ozerov)
* Added skip of negative sleep time while waiting for QQ byte (thx Alexey Ozerov)

2013-05-05:
* Added function checks whether the FD is still a valid serial device.

2013-04-27:
* Improved csv files read in a way that ebus parts are not case sensitive.
* Added eb_cmd_uppercase function.

2013-04-17:
* Changed error messages from daemon startup vom E_ERR to E_ALL.

2013-04-09:
* Extended signal handler to fit with logrotate / logging facility.
* Added ebusd.logrotate.d file too contrib.
* Added gentoo ebusd.init.d and ebusd.conf.d scripts.
* Reverted logging functions too old behavior.

2013-04-08:
* Logging functions changed so it fits together with the behavior of logrotate.
* Fixed function eb_cmd_search_com_id so it compares class length too.

2013-03-28:
* Fixed daemon crash if some spaces was found behind command (without subcommands.)

2013-03-16:
* Fixed slave message CRC check for cyc messages.

2013-03-15:
* Improved cyc commands data handling so all parts from message could be decoded.
* Added new parameter d_part to element configuration part.
* Updated documantation.
* ebusd.init script (debian) slightly modified.

2013-03-06:
* Fixed extension for command files in configuration. A point is not necessary.

2013-03-03:
* Added debian init script ebusd.init to contrib.
* Fixed autogen.sh that it worked properly with bourne shell.

2013-03-01:
* Added new directory doc with some usefull documentation.
* Added an example command csv file into contrib directory.
* Changed width of class string from 5 to 20.

2013-02-28:
* Added loglevel as telnet command to change logging level at runtime.
* Moved eb_cmd* functions from ebus-bus file to new ebus-cmd file.
* Added many explicit casts to remove compiler warnings.

2013-02-27: